TestEclipse/src/objects/Invoice_Statement_Media_Library__c.object
<CustomObject>
    <description>Invoice of customer on purchasing media.</description>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customer Id to display on bill.</description>
        <label>Customer ID</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Media Invoice Statements</relationshipLabel>
        <relationshipName>Invoice_Statements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Display customer&apos;s first name</description>
        <formula>Customer_ID__r.First_Name__c</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Displays last name of a customer</description>
        <formula>Customer_ID__r.Last_Name__c</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <label>Media Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>